Knob component first version

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"private": true,
 	"author": "Goran Ljubojevic",
 	"dependencies": {
+		"prop-types": "^15.5.8",
 		"react": "^15.5.4",
 		"react-dom": "^15.5.4"
 	},
