--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Goran Ljubojevic",
   "homepage": "https://gljubojevic.github.io/akai-mpk-mini-editor",
   "dependencies": {
+    "browser-filesaver": "^1.1.1",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
